@@ -1,3 +1,8 @@
+2004-03-01  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munge/munge.c, src/munge/unmunge.c:
+	  Ignore EPIPE when closing output streams.
+
 2004-02-13  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/str.c, src/libcommon/str.h:
